                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-01-2006 fixed: 40 character XBE names are now handled correctly.
 - 11-01-2006 fixed: XPR font rendering was aliased (looked thin).
 - 11-01-2006 fixed: File with no extension called with PlayFile via webserver crash.
 - 11-01-2006 fixed: Slideshow corrupt .xml file (only one picture was shown).
 - 11-01-2006 fixed: hopefully fixed fast wmv's with an updated mplayer.dll
 - 11-01-2006 added: made dvdplayer pass on extradata from demuxer to codec, enables it to play almost anything ffmpeg can play (including some quicktime)
 - 11-01-2006 changed: cleaned up codec selection for dvdplayer and enabled ffmpeg audio decoder
 - 10-01-2006 fixed: Settings passwords were displayed plain text on edit.
 - 10-01-2006 fixed: Controls with no visibility animations were always shown, regardless of their <visible> tag.
 - 10-01-2006 fixed: Settings Slider controls weren't centered.
 - 10-01-2006 fixed: text boxes displaying no text.
 - 10-01-2006 fixed: playlist hanging when randomize is enabled
 - 10-01-2006 changed: disabled seeking when ff/rw in menu and partially fixed rewind. only fast rewinds work
 - 10-01-2006 added: workaround to the playlist problem with randomize that will prevent the hang, but the underlying problem still exists.
 - 10-01-2006 fixed: dvdplayer: some vobs reported a wrong totaltime, as playback progressed totaltime decreased rapidly and no seeking was possible. 
 - 10-01-2006 fixed: changed to use libmpeg2 for mpeg1 caused ffmpeg to be used for everything instead in dvdplayer
 - 10-01-2006 fixed: playlists found in subfolders off the music and video playlists locations